--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lib/**/*"
   ],
   "scripts": {
+    "start": "npm run build && npm test",
     "build": "tsc",
     "clean": "rm -rf ./lib/",
     "cm": "cz",
