--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,14 @@
 {
   "compilerOptions": {
-    "target": "ES2018",
+    "target": "es6",
     "module": "commonjs",
-    "allowJs": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
     "declaration": true,
-    "emitDeclarationOnly": true,
-    "outDir": "lib",
+    "outDir": "./lib/",
+    "strict": true,
+    "allowJs": true,
+     "esModuleInterop": true,
+    // "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts","test/**/*.ts"],
+  "include": ["src/**/*.ts","test/**/*.ts"]
 }
