--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "semantic-release": "semantic-release",
     "test:watch": "jest --watch",
     "test": "jest --coverage",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "coverage": "codecov"
   },
   "repository": {
     "type": "git",
