--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/iamsr/shopify-hscode.git"
+    "url": "https://github.com/iamsr/shopify-hscode.git"
   },
   "author": {
     "name": "Shubham Rawat",
